Add Live/Paper trading mode selector to exchange credentials dialog
Changes:
1. Added ComboBox in showExchangeCredentialDialog() for selecting LIVE or PAPER trading mode
   - Positioned between API Secret and Telegram Token fields
   - Defaults to configured trading mode or LIVE if not set
   - Saves selected mode to configuredTradingMode when credentials are saved

2. Wired trading mode selection to exchange adapter
   - Trading mode is passed to createExchange() call
   - Exchange.setUserSelectedTradingMode() called to apply mode
   - Persisted in preferences alongside other exchange credentials

3. Synced toolbar trading mode selector with credentials dialog
   - When credentials are validated in completeConnectionValidation()
   - Trading mode selector automatically updates to match configured mode
   - Ensures UI consistency between credentials and toolbar

This allows users to set trading mode (Live or Paper) directly in credentials dialog, with automatic synchronization to the toolbar.